--- a/index.html
+++ b/index.html
@@ -1,13 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="br">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-    <title>Document</title>
+    <title> exerci</title>
 </head>
 <body>
-    <p class="p">hello word</p>
+    <h1>HTML5 - Exercício 03: Formulários</h1>
+
+<fieldset>
+           <legend> Dados Pessoais</legend>
+        <form>
+           <div class=" row">
+               <label for="nome"><strong>Nome :</strong></label>
+               <input type="text" placeholder="Digite seu nome">
+           </div> <br><br>
+           <div class=" row">
+                <label for="sobrenome"><Strong>Sobrenome :</Strong></label>
+                <input type="text" placeholder='digite seu sobrenome'>
+           </div><br><br>
+           <div class=" row">
+                <label for="CPF"><Strong> CPF :</Strong></label>
+                <input type="number" placeholder="Digite sewu cpf">
+          </div><br><br>
+          <div class=" row">
+            <label for="email"><Strong>Email: </Strong></label>
+            <input type="email" placeholder="Digite sewu e-mail">
+          </div><br><br>
+          <div class="row">
+              <label for="sexo"><Strong>Sexo :</Strong></label>
+              <input type="radio" value="Masculino" id="Masculino" name='sexo'  >
+              <label for="Masculino">Masculino</label>
+              <input type="radio" value="Feminino" id="Feminino" name='sexo'  >
+              <label for="Feminino">Feminino</label>
+              <input type="radio" value="Outros" id="Outross" name='sexo'  >
+              <label for="Outros">Outros</label>
+          </div><br><br>
+          <div class="row">
+              <label for=''><Strong>Data de nascimento :</Strong></label>
+              <input type="date">
+          </div><br><br>
+          <div > 
+              <input type="submit">
+              <input type="reset">
+             
+          </div>
+     </form>
+</fieldset>
+    
+
+
 </body>
-</html>
+</htm
