feito ajusto do cpf

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
-    <title> exerci</title>
+    <title> exercicighit</title>
 </head>
 <body>
     <h1>HTML5 - Exercício 03: Formulários</h1>
@@ -22,7 +22,7 @@
            </div><br><br>
            <div class=" row">
                 <label for="CPF"><Strong> CPF :</Strong></label>
-                <input type="number" placeholder="Digite sewu cpf">
+                <input type="text" placeholder="Digite sewu cpf">
           </div><br><br>
           <div class=" row">
             <label for="email"><Strong>Email: </Strong></label>
